src/scss/modules/_result.scss
.result {
  text-align: center;
  padding-top: 6px;

  &__title {
    margin-bottom: 90px;
  }

  &__footer {
    .button {
      margin: 0 auto;
    }
  }

  &__text {
    width: 100%;
    max-width: 400px;
    border-top: 1px solid #D8D8D8;
    border-bottom: 1px solid #D8D8D8;
    padding: 27px 0;
    margin: 0 auto;

    @include breakpoint($mobile) {
      max-width: 286px;
      border: 0;
    }

    @include breakpoint((max-width 320px, max-height 568px)) {
      padding: 8px 0;
      margin-bottom: 15px;
      font-size: 9px;
    }

    b {
      font-weight: bold;
    }
  }

  &__sizes {
    display: flex;
    justify-content: center;
    margin: 0 auto;
    margin-bottom: 105px;
    max-width: 300px;
    position: relative;

    @include breakpoint($mobile) {
      margin-bottom: 45px;
    }

    @include breakpoint((max-width 320px, max-height 568px)) {
      max-width: 215px;
      margin-bottom: 10px;
    }
  }

  &__size {
    top: 21px;
    position: absolute;
    left: 0;
    display: none;

    @include breakpoint((max-width 320px, max-height 568px)) {
      top: 8px;
    }

    &.active {
      display: block;
    }

    &--normal {
      margin: 0 26px;
      margin-top: 0;
      position: static;
    }

    &--normal &-num {
      height: 100px;
      width: 100px;
      font-size: rem(45px);
      margin-bottom: 11px;
    }

    &--loose {
      right: 0;
      left: auto;
    }
  }

  &__size-num {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80px;
    width: 80px;
    border-radius: 25px;
    font-weight: 300;
    text-transform: uppercase;
    font-size: rem(35px);
    margin-bottom: 10px;
    background: linear-gradient(36.34deg, #FFB663 0%, #FF8F35 100%);
    color: #fff;
  }

  &__size-desc {
    font-size: rem(12px);
  }
}

